# RedTeam-AI

Desktop/RedTeamAI/: .gitignore  LICENSE  README.md  launch.bat  main.py  pyproject.toml  requirements.txt
Desktop/RedTeamAI/.github/workflows/: build.yml
Desktop/RedTeamAI/redteamai/: __init__.py  app.py  constants.py
Desktop/RedTeamAI/redteamai/ai/: __init__.py  agent.py  anthropic_backend.py  backend_factory.py  base.py  groq_backend.py  message_history.py  ollama_backend.py  openai_compat_backend.py  prompt_templates.py  tool_manifest.py
Desktop/RedTeamAI/redteamai/config/: __init__.py  defaults.toml  manager.py  settings.py
Desktop/RedTeamAI/redteamai/data/: __init__.py  database.py  models.py
Desktop/RedTeamAI/redteamai/data/repositories/: __init__.py  finding_repo.py  project_repo.py  session_repo.py
Desktop/RedTeamAI/redteamai/gui/: main_window.py  theme.py
Desktop/RedTeamAI/redteamai/gui/modules/: __init__.py  ctf_module.py  dashboard.py  exploitation_module.py  recon_module.py  reporting_module.py  settings_module.py  target_manager.py  web_scan_module.py
Desktop/RedTeamAI/redteamai/gui/panels/: ai_chat_panel.py
Desktop/RedTeamAI/redteamai/gui/styles/: dark.qss  syntax_highlight.py
Desktop/RedTeamAI/redteamai/reporting/: generator.py  markdown_export.py  pdf_export.py
Desktop/RedTeamAI/redteamai/tools/: base.py  executor.py  registry.py
Desktop/RedTeamAI/redteamai/utils/: ansi_parser.py  cvss_calculator.py  logger.py  platform_utils.py  sanitizer.py
Desktop/RedTeamAI/redteamai/workers/: __init__.py  ai_worker.py  tool_worker.py  worker_signals.py
(+22 files in other folders)
